--- a/index.html
+++ b/index.html
@@ -8,47 +8,56 @@
     <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-    <main class = "cardContainer">
-        <div class = "cardBackground">
-            <h1 class = "company">
-                otoro
-            </h1>
+    <div class = "main">
+        <div class = "col1">
             <img class="tuna" src="./tuna.svg" alt="">
-            <p class = "quote">Welcome to otoro</p>
         </div>
-        <div class = "formContainer">
-            <div class = "header">Your journey awaits...</div>
-            <form action="" method="get" class = "form">
-                <div class = "formRow">
-                    <label for="firstName">first name</label>
-                    <input id = "firstName" name="firstName" type="text" required/>
-                </div>
-                <div class = "formRow">
-                    <label for="lastName">last name</label>
-                    <input id = "lastName" name="lastName" type="text" required/>
-                </div>
-                <div class = "formRow">
-                    <label for="email">email</label>
-                    <input id = "email" name="email" type="email" required/>
-                </div>
-                <div class = "formRow">
-                    <label for="firstName">first name</label>
-                    <input id = "firstName" name="firstName" type="text" required/>
-                </div>
-                <div class = "formRow">
-                    <label for="phone">phone</label>
-                    <input id = "tel" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" required/>
-                </div>
-                <div class = "formRow">
-                    <label for="password">password</label>
-                    <input id = "password" name="password" type="text" required/>
-                </div>
-                <div class = "formRow">
-                    <label for="confirm password">confirm password</label>
-                    <input id = "confirm password" name="confirm password" type="text" required/>
-                </div>
+        <div class = "col2">
+            <div class = "header">
+            </div>
+            <div class = "inputSection">
+                <h2>Your Journey Awaits...</h2>
+                
+            
+            <form id = "myForm" action="" method="get">
+                <label for = "firstname"> First name
+                    <input type = "text" id = "firstname" required>
+                    <div id = "first-name-error" class="error"></div>
+                </label>
+                <label for = "lastname"> Last name
+                    <input type = "text" id = "lastname" required>
+                    <div id = "last-name-error" class="error"></div>
+                </label>
+                <label for = "email"> Email
+                    <input type = "email" id = "email" required>
+                    <div id = "email-error" class="error"></div>
+                </label>
+                <label for = "phonenumber"> Phone Number
+                    <input type = "tel" id = "phonenumber" required 
+                    pattern="[0-9]{10}">
+                    <div id = "tel-error" class="error"></div>
+                </label>
+                <label for = "password"> Password
+                    <input type = "password" id = "password" required 
+                    pattern='(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}'>
+                    <div id = "password-error" class="error"></div>
+                </label>
+                <label for = "cPassword"> Confirm Password
+                    <input type = "password" id = "cPassword" required
+                    pattern='(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}'>
+                    <div id = "cPassword-error" class="error"></div>
+                </label>
             </form>
+            <h4>or</h4>
+            <a href="#" class = "googleLink">
+                <img src="google.png" alt="">Continue with Google</a>
         </div>
-    </main>
+        <div class = "submitSection">
+                    <button type="submit" form = "myForm">Create Account</button>
+                    <p>Already have an account? <a href="">Login</a></p>
+                </div>
+
+        </div>
+</div>
 </body>
 </html>
